plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.15.0'
}

group 'org.intellij.sdk'
version '3.0'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

·

dependencies {
    implementation 'org.projectlombok:lombok:1.18.34' // 主项目使用的 Lombok 版本
    compileOnly 'org.projectlombok:lombok:1.18.34' // 只在编译时需要，不参与运行时
    annotationProcessor 'org.projectlombok:lombok:1.18.34' // 注解处理器，用于生成代码
    testCompileOnly 'org.projectlombok:lombok:1.18.34' // 测试时编译依赖
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34' // 测试时注解处理器

    implementation 'de.plushnikov.lombok-intellij-plugin:intellij-facade-factory:0.5' // IntelliJ Lombok 插件支持
    implementation ("io.swagger.core.v3:swagger-models:2.2.22")

}

intellij {
    version = '2024.1.1'
    plugins = ['com.intellij.java']
}

buildSearchableOptions {
    enabled = false
}

patchPluginXml {
    version = project.version
    sinceBuild = '221.*'
    untilBuild = '241.*'
}


runIde {
    jvmArgs '-Xmx4G'
    jvmArgs '-Xss10M'
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

publishPlugin {
    token = System.getenv("ENV.JETBRAINS.TOKEN")
}

publishPlugin {
    channels = ['stable']
}